test/classes/diten/breakList.good
breakList.chpl:20: In function 'bar':
breakList.chpl:23: error: multiple overload sets are applicable to this call
breakList.chpl:3: note: the best-matching candidate is here
breakList.chpl:1: note: ... defined in this module
$CHPL_HOME/modules/standard/LinkedLists.chpl:nnnn: note: even though the candidate here is also available
$CHPL_HOME/modules/standard/LinkedLists.chpl:nnnn: note: ... defined in this module
breakList.chpl:23: note: use --no-overload-sets-checks to disable overload sets errors
